# xFAPI

./: .gitignore  CMakeLists.txt  LICENSE  NOTICE  README.md  build_xfapi.sh  run_xfapi.sh  setup_env.sh  sync_nfapi.sh
conf/: aerial_oai_config.yaml  aerial_ocudu_config.yaml  oai_ocudu_config.yaml  ocudu_ocudu_config.yaml  ocudu_ocudu_split_l1.yaml  ocudu_ocudu_split_l2.yaml  xfapi_configs.cfg
docs/: BUILD_AND_RUN.md  build_and_run_aerial_oai.md  build_and_run_aerial_ocudu.md  build_and_run_oai_ocudu.md  build_and_run_ocudu_ocudu.md  dashboard_install.md
src/core/AERIAL_OAI/: aerial_nvipc.c  aerial_nvipc.h  aerial_oai_bridge.c  aerial_oai_bridge.h  aerial_send.c  aerial_send.h  nfapi_codec_be.h  nfapi_codec_be.map  nfapi_codec_be_rename.h  nfapi_codec_le.map  oai_p7.c  oai_pnf.c  oai_pnf.h
src/core/AERIAL_OCUDU/: aerial_nvipc.c  aerial_nvipc.h  aerial_send.c  aerial_send.h  forwarder_l2_to_aerial.c  forwarder_l2_to_aerial.h
src/core/OAI_OCUDU/: forwarder_l2_to_oai.c  forwarder_l2_to_oai.h  oai_p7.c  oai_p7.h  oai_vnf.c  oai_vnf.h
src/core/OCUDU_OCUDU/: forwarder_l1_to_l2.c  forwarder_l1_to_l2.h  forwarder_l2_to_l1.c  forwarder_l2_to_l1.h  forwarder_split_l1.c  forwarder_split_l1.h  forwarder_split_l2.c  forwarder_split_l2.h  pair0_master_pool.c  pair0_master_pool.h
src/core/bridge/: bridge_forwarder.c  bridge_forwarder.h  buffer_pool.c  buffer_pool.h
src/dashboard/: .dockerignore  .gitignore  Dockerfile  docker-compose.yml
src/dashboard/client/: .gitignore  index.html  package-lock.json  package.json  vite.config.js
src/dashboard/client/src/: App.jsx  main.jsx
src/dashboard/client/src/components/: IconRail.jsx  KpiTile.jsx  PayloadHexSearch.jsx  SaveToVaultModal.jsx
src/dashboard/client/src/components/charts/: LatencyChart.jsx  LatencyHistogram.jsx  MessageStream.jsx  SfnSlotHeatmap.jsx  Sparkline.jsx
src/dashboard/client/src/lib/: api.js  theme.js  thresholds.jsx  toast.jsx
src/dashboard/client/src/pages/: Dashboard.jsx  Diff.jsx  Sequence.jsx  Settings.jsx  Vault.jsx
src/dashboard/server/: main.py  run_server.sh
src/framework/: aerial_l1_interface.c  aerial_l1_interface.h  aerial_oai_l1_interface.c  aerial_oai_l1_interface.h  framework_init.c  framework_init.h  l1_interface.c  l1_interface.h  l2_interface.c  l2_interface.h  oai_l1_interface.c  oai_l1_interface.h  oai_l2_interface.c  oai_l2_interface.h  ocudu_l1_interface.c  ocudu_l1_interface.h  ocudu_l2_interface.c  ocudu_l2_interface.h
src/framework/dpdk/: dpdk_init.c  dpdk_init.h
src/include/: common_global.h  common_types.h
src/ipc/xsm/xsm/: xsm.h
src/main/: app_context.h  app_manager.c  main.c  startup_banner.h
src/sim/common/: sim_common.c  sim_common.h
src/translation/AERIAL_L1_OCUDU/: ocudu_fapi_wire.h
src/translation/AERIAL_L1_OCUDU/L1_to_L2/: aerial_l1_to_l2_p5.c  aerial_l1_to_l2_p5.h  aerial_l1_to_l2_p7.c  aerial_l1_to_l2_p7.h
src/translation/AERIAL_L1_OCUDU/L1_to_L2/P5/: config_response.c  param_response.c
src/translation/AERIAL_L1_OCUDU/L1_to_L2/P7/: crc_indication.c  rach_indication.c  rx_data_indication.c  slot_indication.c  srs_indication.c  uci_indication.c
src/translation/AERIAL_L1_OCUDU/L2_to_L1/: aerial_l2_to_l1_p5.c  aerial_l2_to_l1_p5.h  aerial_l2_to_l1_p7.c  aerial_l2_to_l1_p7.h
src/translation/AERIAL_L1_OCUDU/L2_to_L1/P5/: config_request.c  param_request.c  start_request.c  stop_request.c
src/translation/AERIAL_L1_OCUDU/L2_to_L1/P7/: dl_tti_request.c  tx_data_request.c  ul_tti_request.c
src/translation/OAI_L1_OCUDU/: ocudu_fapi_wire.h
src/translation/OAI_L1_OCUDU/L1_to_L2/: oai_l1_to_l2_p5.c  oai_l1_to_l2_p5.h  oai_l1_to_l2_p7.c  oai_l1_to_l2_p7.h
src/translation/OAI_L1_OCUDU/L1_to_L2/P5/: config_response.c  param_response.c
src/translation/OAI_L1_OCUDU/L1_to_L2/P7/: crc_indication.c  rach_indication.c  rx_data_indication.c  slot_indication.c  uci_indication.c
src/translation/OAI_L1_OCUDU/L2_to_L1/: oai_l2_to_l1_p5.c  oai_l2_to_l1_p5.h  oai_l2_to_l1_p7.c  oai_l2_to_l1_p7.h
src/translation/OAI_L1_OCUDU/L2_to_L1/P5/: config_request.c  param_request.c  start_request.c  stop_request.c
src/translation/OAI_L1_OCUDU/L2_to_L1/P7/: dl_tti_request.c  tx_data_request.c  ul_tti_request.c
src/utils/config/: yaml_config.c  yaml_config.h  yaml_fail_check.c  yaml_fail_check.h  yaml_utils.h
src/utils/logs/: unified_logger.c  unified_logger.h
src/utils/memory/: mem_ops.c  mem_ops.h
src/utils/stats_generation/: message_stats.c  message_stats.h
src/utils/task_mngr/: itc_queue.c  itc_queue.h  thread_manager.c  thread_manager.h
